@@ -3,6 +3,7 @@
 date Version 3.00.04
 * Fixed visual editor for subpanels.
 * Fixed circular subclassing. This resolves FS#32.
+^ Now limiting to a single instance of wxFB per project file. The resolves FS#31.
 
 10-08-2006 Version 3.00.03 (Beta 1)
 * Fixed wxWindow settings code generation.
